# epiclibcpp

./: .clang-format  .gitignore  Building.md  CMakeLists.txt  README.md  build_local.py  build_local.sh  format_src.sh  pyproject.toml
.github/workflows/: wheels.yml
epiclib/: __init__.py
run_tests/: run_test_from_local_build.py  run_test_from_pypi.py  run_test_from_test_pypi.py
src/: 0_mylibrary.cpp  and_nodes.cpp  and_nodes.h  assert_throw.cpp  assert_throw.h  auditory_encoder_base.cpp  auditory_encoder_base.h  auditory_event_types.cpp  auditory_event_types.h  auditory_localization.cpp  auditory_localization.h  auditory_perceptual_processor.cpp  auditory_perceptual_processor.h  auditory_perceptual_store.cpp  auditory_perceptual_store.h  auditory_physical_store.cpp  auditory_physical_store.h  auditory_processor.cpp  auditory_processor.h  auditory_sensory_store.cpp  auditory_sensory_store.h  auditory_store.cpp  auditory_store.h  auditory_store_processor.h  binding_pair.cpp  binding_pair.h  binding_set.cpp  binding_set.h  binding_set_list.cpp  binding_set_list.h  clause.cpp  clause.h  cognitive_event_types.cpp  cognitive_event_types.h  cognitive_processor.cpp  cognitive_processor.h  combining_nodes.cpp  combining_nodes.h  command_interface.cpp  command_interface.h  (+171 more)
