[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.10",
  "cmake>=3.20",
  "ninja>=1.10",
  "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "epiclibcpp"
description = "EPIC C++ core wrapped with pybind11 as the 'epiclib' Python extension"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary or your license here" }
authors = [{ name = "Travis Seymour" }]
dynamic = ["version"]
dependencies = []

[project.urls]
Homepage = "https://github.com/travisseymour/epiclibcpp"
Issues = "https://github.com/travisseymour/epiclibcpp/issues"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.scikit-build]
wheel.expand-macos-universal-tags = false
cmake.verbose = true
